fix: change Collectors::toList to Stream::toList